[BMG] xe 0000:03:00.0: Unable to change power state from D3cold to D0, device inaccessible
[ 432.883917] pcieport 0000:00:01.0: broken device, retraining non-functional downstream link at 2.5GT/s
[ 433.893941] pcieport 0000:00:01.0: retraining failed
[ 434.898993] pcieport 0000:00:01.0: Data Link Layer Link Active not set in 1000 msec
[ 434.906956] pcieport 0000:01:00.0: Unable to change power state from D3cold to D0, device inaccessible
[ 434.916584] pcieport 0000:02:01.0: Unable to change power state from D3cold to D0, device inaccessible
[ 434.926080] xe 0000:03:00.0: Unable to change power state from D3cold to D0, device inaccessible
[ 434.926104] pcieport 0000:02:02.0: Unable to change power state from D3cold to D0, device inaccessible
[ 434.944458] snd_hda_intel 0000:04:00.0: Unable to change power state from D3cold to D0, device inaccessible
[ 434.994951] xe 0000:03:00.0: Unable to change power state from D3cold to D0, device inaccessible
On every runtime pm resume. So, in order to reproduce, simply let the display goes off on idle, then move your cursor and observe the logs. Or reload the xe module, which forces d3cold transition. Or also use igt@xe_pm@d3cold-basic
$ lspci -nnv -s 03:00.0
03:00.0 VGA compatible controller [0300]: Intel Corporation Battlemage G21 [Intel Graphics] [8086:e20b] (prog-if 00 [VGA controller])
Subsystem: Device [172f:4215]